--- a/MollenEngine/MollenEngine.vcxproj
+++ b/MollenEngine/MollenEngine.vcxproj
@@ -149,7 +149,7 @@
     </PreBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="first_app.cpp" />
+    <ClCompile Include="engine.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="device.cpp" />
     <ClCompile Include="swap_chain.cpp" />
@@ -157,7 +157,7 @@
     <ClCompile Include="window.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="first_app.hpp" />
+    <ClInclude Include="engine.hpp" />
     <ClInclude Include="device.hpp" />
     <ClInclude Include="swap_chain.hpp" />
     <ClInclude Include="pipeline.hpp" />
